# docufill

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/docufill/: __init__.py  __main__.py  _system_check.py  cli.py  exceptions.py  models.py  mrz_extract.py  ocr_fallback.py  pdf_handler.py  scanner.py
src/docufill/web/: app.py
src/docufill/web/templates/: index.html
tests/: test_cli.py  test_mrz_extract.py  test_scanner.py  test_web.py
