[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docufill"
version = "0.1.0"
description = "Extract guest info from passport/ID scans via OCR"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Docufill Contributors" }]
keywords = ["ocr", "passport", "mrz", "hotel", "document", "extraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "click>=8.0",
    "flask>=3.0",
    "Pillow>=10.0",
    "passporteye>=2.0",
    "pytesseract>=0.3",
    "pdf2image>=1.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
docufill = "docufill.cli:main"

[project.urls]
Homepage = "https://github.com/docufill/docufill"
Issues = "https://github.com/docufill/docufill/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
